--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,22 +48,17 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav pullleft">
-            <li class="active"> <a href="index.html">Home </a> </li>
-                    <li> <a href="about.html">Parts</a> </li>
-                    <li> <a href="service.html">Services</a> </li>
-  <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Shopping Cart</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="blog-fullwidth.html">blog-fullwidth</a></li>
-                                <li><a href="blog-lsidebar.html">blog-lsidebar</a></li>
-                                <li><a href="blog-rsidebar.html">blog-rsidebar</a></li>
-                            </ul>
+            <li class="active"> <a href="users/id">Home </a> </li>
+                    <li> <a href="new.html.erb">My Cars</a> </li>
+                    <li> <a href="service.html">Search Parts</a> </li>
+  <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Maintenance History</a>
+                            
                         </li>           <li> <a href="contact.html"> Contact</a> </li>
     </ul>
             <ul class="navbar-right top-social">
-        <li><a href="#"><i class="fa fa-facebook"></i></a> </li>
-        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-        <li><a href="#"><i class="fa fa-github"></i></a></li>
-        <li><a href="#"><i class="fa  fa-medium"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/conrad-szklarz-1a44a576/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+        <li><a href="https://github.com/conradszklarz"><i class="fa fa-github"></i></a></li>
+        <li><a href="https://medium.com/@conradszklarz"><i class="fa  fa-medium"></i></a></li>
             </ul>
           </div>
       </div>
@@ -79,7 +74,7 @@
         <div class="title">Welcome To The Workshop</div>
       <div class="clearfix"></div>
       <div class="text margint30 ">
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. </p></div>
+      <p>. </p></div>
       </div>
       <div class="col-md-4 col-sm-4  wow animated fadeInUp animated animated animated animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
         <img src="/img/img1.jpg" class="img-responsive" alt="" />
@@ -95,14 +90,14 @@
 <section class="car-service">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-sm-6  wow animated fadeInUp animated animated animated animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+      <div class="col-md-0 col-sm-0  wow animated fadeInUp animated animated animated animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
         <div id="owl-demo" class="owl-carousel owl-theme">
           <div class="item"><img src="/img/img4.jpg" alt="The Last of us"></div>
           <div class="item"><img src="/img/img4.jpg" alt="The Last of us"></div>
           <div class="item"><img src="/img/img4.jpg" alt="The Last of us"></div> 
         </div>
       </div>
-    <div class="col-md-6 col-sm-6 nopadding  wow animated fadeInUp animated animated animated animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+    <div class="col-md-0 col-sm-0 nopadding  wow animated fadeInUp animated animated animated animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
 
 
 
@@ -126,84 +121,26 @@
 <section class="schdule">
   <div class="container">
     <div class="row">
-      <div class="col-md-9 col-sm-9  wow animated fadeInUp animated animated animated animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+      <div class="col-md-0 col-sm-0  wow animated fadeInUp animated animated animated animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
         <div class="car-service-title"></div>
-        <div class="title-right">Schedule Maintenance<br />
-        </div>
+        
     </div>
     </div>
     <div class="row">
-      <div class="col-md-9 col-sm-9 form text-center  wow animated fadeInUp animated animated animated animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-        <div class="form-group"> 
-          <div class="row">
-            <div class="col-md-4 col-sm-4"> <input type="text" placeholder="Full Name" class="form-control">  </div>
-            <div class="col-md-4 col-sm-4"><input type="text" class="form-control" placeholder="Email Address"> </div>
-            <div class="col-md-4 col-sm-4"> <input type="text" placeholder="Phone Number" class="form-control">  </div>
-          </div>
+      <div class="col-md-0 col-sm-0 form text-center  wow animated fadeInUp animated animated animated animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+        </div>
         </div>
         
-        <div class="form-group"> 
-          <div class="row">
-          <div class="col-md-4 col-sm-4"><select class="form-control"><i class="fa fa-angle-down" aria-hidden="true"></i>
-                            <option>Choose brand </option>
-                            <option>Choose brand</option>
-                            <option>Choose brand</option>
-                            <option>Choose brand</option>
-                        </select>
+            
             </div>
-            <div class="col-md-4 col-sm-4"><select class="form-control">
-                            <option>Choose model </option>
-                            <option>Choose model </option>
-                            <option>Choose model </option>
-                            <option>Choose model </option>
-                        </select>
+              
             </div>
-            <div class="col-md-4 col-sm-4"><select class="form-control">
-                            <option>Select repair part</option>
-                            <option>Select repair part</option>
-                            <option>Select repair part</option>
-                            <option>Select repair part</option>
-                        </select>
-            </div>
-            
-            
-            
-        </div>
-        </div>
-        <div class="form-group"> 
-          <div class="row">
-          <div class="col-md-4 col-sm-4"><select class="form-control">
-                            <option>Service Center Location</option>
-                            <option>Service Center Location</option>
-                            <option>Service Center Location</option>
-                            <<option>Service Center Location</option>
-                        </select>
-            </div>
-            <div class="col-md-4 col-sm-4"> <div class="input-group date">
-                    <input type='date' class="form-control" id="datetpicker" />
-                    <span class="input-group-addon">
-                        <span class="glyphicon glyphicon-calendar"></span>
-                    </span>
-                </div>
-            </div>
-              <div class="col-md-4 col-sm-4"> <div class="input-group date">
-                    <input type="time" class="form-control"  id="datetpicker1"/>
-                    <span class="input-group-addon">
-                        <span class="glyphicon glyphicon-calendar"></span>
-                    </span>
-                </div>
-            </div>
-            
-            
-            
-            
-        </div>
+          </div>
         </div>
           <div class="form-group"> 
-          <textarea name="" cols="" class="form-control message_text" rows="12">Enter Your Message</textarea>
+          
         </div>
-      <div class="col-sm-4 col-xs-12 nopadding">
-        <button type="submit" class="btn btn-blue"> SUBMIT</button>
+      
       </div>
     </div>
     </div>
@@ -223,58 +160,29 @@
     <div class="col-md-4 col-sm-4 wow animated fadeInUp animated animated animated animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
       <div class="box">
         <div class="quote text-center"><i class="fa fa-quote-left" aria-hidden="true"></i></div>
-        <p> "Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante."</p>
-        <div class="author text-center">-- JOHN DE --</div>
+        <p> "Exactly what I wanted. Easy and simple. I have an older car so this will help me get even more miles out of it cause it can keep track of maintenance way easier."</p>
+        <div class="author text-center">-- Lauren Hall --</div>
       </div>
     </div>
     <div class="col-md-4 col-sm-4 wow animated fadeInUp animated animated animated animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
     <div class="box">
     <div class="quote text-center"><i class="fa fa-quote-left" aria-hidden="true"></i></div>
-      <p> "Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante."</p>
-      <div class="author text-center">-- JOHN DE --</div>
+      <p> "Amazing app! Easy to set up. The app is super cool and very intuitive. And I love how it explains things in plain english – no technical nonsense. And since I’m always forgetting oil changes and tune up appointments, this is going to be super helpful."</p>
+      <div class="author text-center">-- Jack Barnes --</div>
     </div>
     </div>
     <div class="col-md-4 col-sm-4  wow animated fadeInUp animated animated animated animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
     <div class="box">
     <div class="quote text-center"><i class="fa fa-quote-left" aria-hidden="true"></i></div>
-      <p> "Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante."</p>
-      <div class="author text-center">-- JOHN DE --</div>
+      <p> "Bought this for my mom for help with car problems since I'm far away. It took no time to sign in and the app is very easy to understand. Very impressed with how easy it is to use."</p>
+      <div class="author text-center">-- Mark Watts --</div>
     </div>
     </div>
     </div>
   </div>
 </section>
 
-<section class="blog">
-  <div class="container">
-    <div class="row">
-    
-    <div class="col-md-12">
-    <div class="col-md-2  nopadding"><span class="number">04</span>
-    </div>
-    <div class="col-md-4"><h1>OUR LATEST BLOG </h1></div>
-  
-    </div>
-    </div>
-    <div class="row">
-    <div class="col-md-4 col-sm-4  wow animated fadeInUp animated animated animated animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-    <h3>Donec quam felis, ultricies nec pellentesque eu, pretium quis sem. Nulla consequat massa quis enim.</h3>
-    <div class="blog-author"><strong>By : <span class="blue">John Deo</span>   /  October 07, 2016</strong></div>
-    <p>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</p>
-    </div>
-    <div class="col-md-4 col-sm-4  wow animated fadeInUp animated animated animated animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-    <h3>Maecenas nec odio et ante tincint tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.</h3>
-      <div class="blog-author"><b>By : <span class="blue">John Deo</span>  /  October 07, 2016</b></div>
-    <p>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</p>
-    </div>
-    <div class="col-md-4 col-sm-4  wow animated fadeInUp animated animated animated animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-    <h3>Donec quam felis, ultricies nec pellentesque eu, pretium quis sem. Nulla consequat massa quis enim.</h3>
-      <div class="blog-author"><b>By : <span class="blue">John Deo</span>  /  October 07, 2016</b></div>
-    <p>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</p>
-    </div>
-    </div>
-  </div>
-</section>
+
 <div class="container-fluid footer">
   <div class="container">
     <div class="row">
@@ -325,10 +233,9 @@
   <div class="container"> 
   <span class="pull-left"> &copy; 2016 All Rights Reserved. Terms of Use and Privacy Policy</span> 
   <span class="pull-right"> 
-    <a href="#"><i class="fa fa-facebook"></i></a> 
-    <a href="#"><i class="fa  fa-github"></i></a>
-    <a href="#"><i class="fa fa-medium"></i></a> 
-    <a href="#"><i class="fa fa-linkedin"></i></a>  
+    <a href="https://github.com/conradszklarz"><i class="fa  fa-github"></i></a>
+    <a href="https://medium.com/@conradszklarz"><i class="fa fa-medium"></i></a> 
+    <a href="https://www.linkedin.com/in/conrad-szklarz-1a44a576/"><i class="fa fa-linkedin"></i></a>  
   </span>
   </div>
 </div>
