--- a/public/css/style.css
+++ b/public/css/style.css
@@ -339,8 +339,8 @@ span.number
 }
 p
 {
-	font-family: 'Open Sans', sans-serif;
-	font-size:13px;
+	font-family: 'Poppins', sans-serif;
+	font-size:15px;
 	margin:0 auto;
 	color:#848484;
 	line-height:24px;
