--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,17 +48,17 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav pullleft">
-            <li class="active"> <a href="users/id">Home </a> </li>
-                    <li> <a href="new.html.erb">My Cars</a> </li>
-                    <li> <a href="service.html">Search Parts</a> </li>
-  <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Maintenance History</a>
+            
+                    <li> <a href="/client/cars">My Cars</a> </li>
+                    <li> <a href="#">Search Parts</a> </li>
+  
                             
-                        </li>           <li> <a href="contact.html"> Contact</a> </li>
+                        
     </ul>
             <ul class="navbar-right top-social">
-        <li><a href="https://www.linkedin.com/in/conrad-szklarz-1a44a576/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
         <li><a href="https://github.com/conradszklarz"><i class="fa fa-github"></i></a></li>
         <li><a href="https://medium.com/@conradszklarz"><i class="fa  fa-medium"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/conrad-szklarz-1a44a576/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
             </ul>
           </div>
       </div>
@@ -67,10 +67,10 @@
 <section class="welcome">
   <div class="container">
     <div class="row">
-      <div class="col-md-2 col-sm-2 numbers  wow animated fadeInUp animated animated animated animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+      <div class="col-md-2 col-sm-2 numbers  wow animated fadeInUp animated animated animated animated" data-wow-delay="1.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
         <div class="car-service-title"> </div>
       </div>
-      <div class="col-md-6 col-sm-6 nopadding  wow animated fadeInUp animated animated animated animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+      <div class="col-md-6 col-sm-6 nopadding  wow animated fadeInUp animated animated animated animated" data-wow-delay="2.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
         <div class="title">Welcome To The Workshop</div>
       <div class="clearfix"></div>
       <div class="text margint30 ">
@@ -160,7 +160,7 @@
     <div class="col-md-4 col-sm-4 wow animated fadeInUp animated animated animated animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
       <div class="box">
         <div class="quote text-center"><i class="fa fa-quote-left" aria-hidden="true"></i></div>
-        <p> "Exactly what I wanted. Easy and simple. I have an older car so this will help me get even more miles out of it cause it can keep track of maintenance way easier."</p>
+        <p> "Exactly what I wanted. Easy and simple. I have an older car so this will help me get even more miles out of it cause it can keep track of maintenance way easier. Thanks FixMyRide!"</p>
         <div class="author text-center">-- Lauren Hall --</div>
       </div>
     </div>
