--- a/app/views/client/car_parts/show.html.erb
+++ b/app/views/client/car_parts/show.html.erb
@@ -23,3 +23,7 @@
 <a href="/client/car_parts/<%= @car_part['id'] %>/edit">Edit</a>
 <a href="/client/car_parts/<%= @car_part['id'] %>" data-method="delete">Delete</a>
 
+<img src="<%= @eapi["viewItemURL"] %>">
+<p><%= @eapi["_cb_findItemsByKeywords"] %></p>
+
+
