--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,9 @@
           <ul class="nav navbar-nav pullleft">
             
                     <li> <a href="/client/cars">My Cars</a> </li>
-                    <li> <a href="#">Search Parts</a> </li>
+                    <li> <a href="/client/car_parts">Search Parts</a></li>
+                    <li> <a href="#">Troubleshooting</a></li>
+                    <li> <a href="#">How To</a></li>
   
                             
                         
