--- a/app/views/client/maintenance_events/edit.html.erb
+++ b/app/views/client/maintenance_events/edit.html.erb
@@ -17,6 +17,9 @@
     Date: <input type="text" name="date" value="<%= @maintenance_event["date"] %>" />
   </div>
   <div>
+    Mileage: <input type="text" name="mileage" value="<%= @maintenance_event["mileage"] %>" />
+  </div>
+  <div>
     Provider: <input type="text" name="provider" value="<%= @maintenance_event["provider"] %>">
   </div>
   <input type="submit" name="" value="Update Maintenance Event"/>
