--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
         <link rel="stylesheet" href="/css/animate.css" />
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/responsive.css" />
-
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
 </head>
 
 <body>
@@ -44,13 +45,13 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><img src="/img/logo.png" alt=""></a>
+            <a class="navbar-brand" href="/user_profile"><img src="/img/logo.png" alt=""></a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav pullleft">
             
-                    <li> <a href="/client/cars">My Cars</a> </li>
-                    <li> <a href="/client/car_parts">Search Parts</a></li>
+                    <li> <a href="/client/cars/">My Cars</a> </li>
+                    <li> <a href="#">Search Parts</a></li>
                     <li> <a href="#">Troubleshooting</a></li>
                     <li> <a href="#">How To</a></li>
   
@@ -247,6 +248,7 @@
     <script src="/bootstrap/js/bootstrap.min.js"></script>
     <script src="/js/owl.carousel.js"></script>
     <script src="/js/owl.carousel.min.js"></script>
+
 
 
     <script type="text/javascript">
